--- a/latihan5.html
+++ b/latihan5.html
@@ -11,7 +11,7 @@
     <h1>Get To Know Harry Potter's Casts With Me</h1>
     <div class="container">
         <h2>Daniel Radcliffe</h2>
-        <p class="border"><img src="/latihan/images/harry.jpeg"> Daniel Jacob Radcliffe, lahir pada 23 Juli 1989, di Fulham, London, adalah aktor Inggris yang terkenal terutama karena perannya sebagai Harry Potter dalam adaptasi film dari seri buku yang sangat populer karya J.K. Rowling.
+        <p class="border"><img src="/HTMLcantik3/harry.jpeg"> Daniel Jacob Radcliffe, lahir pada 23 Juli 1989, di Fulham, London, adalah aktor Inggris yang terkenal terutama karena perannya sebagai Harry Potter dalam adaptasi film dari seri buku yang sangat populer karya J.K. Rowling.
              Ia memulai karir aktingnya pada usia muda, pertama kali muncul dalam adaptasi BBC dari David Copperfield (1999) sebelum mendapatkan peran ikonis sebagai Harry Potter pada usia 11 tahun. Radcliffe membintangi semua delapan film dari Harry Potter and the Philosopher's Stone (2001) 
              hingga Harry Potter and the Deathly Hallows – Part 2 (2011), yang menjadikannya salah satu aktor dengan bayaran tertinggi di dunia dan mendapatkan pengakuan serta ketenaran internasional.
              <br>
@@ -26,7 +26,7 @@
 
     <div class="container">
         <h2>Ruppert Grint</h2>
-        <p class="border"><img src="/latihan/images/ron.jpeg"> Rupert Grint adalah seorang aktor Inggris yang paling dikenal karena perannya sebagai Ron Weasley dalam film Harry Potter. Berikut adalah penjelasan lebih mendalam tentang karir dan kehidupan pribadinya.
+        <p class="border"><img src="/HTMLcantik3/ron.jpeg"> Rupert Grint adalah seorang aktor Inggris yang paling dikenal karena perannya sebagai Ron Weasley dalam film Harry Potter. Berikut adalah penjelasan lebih mendalam tentang karir dan kehidupan pribadinya.
             Lahir di Inggris, 24 Agustus 1988. Grint adalah anak tertua dari lima bersaudara. Ia tumbuh di Hertfordshire dan mulai tertarik pada akting sejak kecil, berpartisipasi dalam drama sekolah dan kelas drama akhir pekan. 
             Sebelum terpilih untuk berperan dalam Harry Potter, ia tidak memiliki pengalaman akting di layar lebar.
             <br>
@@ -44,7 +44,7 @@
 
     <div class="container">
         <h2>Emma Watson</h2>
-        <p class="border"><img src="/latihan/images/hermione.jpeg">Emma Watson adalah seorang aktris dan aktivis asal Inggris yang terkenal karena perannya sebagai Hermione Granger dalam film seri Harry Potter. Berikut adalah informasi lebih mendalam tentang kehidupan dan karirnya.
+        <p class="border"><img src="/HTMLcantik3/hermione.jpeg">Emma Watson adalah seorang aktris dan aktivis asal Inggris yang terkenal karena perannya sebagai Hermione Granger dalam film seri Harry Potter. Berikut adalah informasi lebih mendalam tentang kehidupan dan karirnya.
         Dengan nama lengkap Emma Charlotte Duerre Watson, ia lahir pada 15 April tahun 1990 di Paris, Pranci.
         Emma Watson lahir dari pasangan Jacqueline Luesby dan Chris Watson, yang keduanya adalah pengacara. Setelah orangtuanya bercerai ketika ia masih kecil, 
         Watson pindah bersama ibunya dan adiknya ke Oxfordshire. Sejak usia enam tahun, ia bercita-cita menjadi aktris dan mulai mengambil kelas akting di Stagecoach Theatre Arts. 
